[package]
name = "vexriscv"
version = "0.0.1"
repository = "https://github.com/xobs/vexriscv-rust"
authors = ["Sean Cross <sean@xobs.io>", "The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to the VexRiscv processor"
keywords = ["riscv", "register", "peripheral", "vexriscv"]
license = "ISC"

[dependencies]
bare-metal = ">=0.2.0,<0.2.5"
bit_field = "0.9.0"

[features]
inline-asm = []
